--- a/style.css
+++ b/style.css
@@ -4,3 +4,6 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.container nav {
+    background-color: black;
+}
