--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .container nav {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.212);
 }
