--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 .container nav {
     background-color: rgba(0, 0, 0, 0.774);
+    display: flex;
 }
 .hero nav .nav-link ul {
     list-style-type: none;
