--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 .hero nav .nav-link ul {
     list-style-type: none;
+    display: flex;
 }
 .hero nav .nav-link ul a {
     text-decoration: none;
