--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-color: rgba(0, 0, 0, 0.774);
     display: flex;
 }
-
+.her nav .nav-link
 .hero nav .nav-link ul {
     list-style-type: none;
     display: flex;
