--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-color: rgba(0, 0, 0, 0.774);
     display: flex;
 }
-.hero nav .nav-link {
+.heroa nav .nav-link {
     display: flex;
 }
 .hero nav .nav-link ul {
