--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .container nav {
     background-color: rgba(0, 0, 0, 0.774);
     display: flex;
+    padding: 20px;
 }
 .hero nav .nav-link {
     display: flex;
