--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 }
 .logo {
     margin-left: 70px;
+    color: white;
 }
 .hero nav .nav-link {
     display: flex;
@@ -23,4 +24,5 @@
 }
 .hero nav .nav-link ul a {
     text-decoration: none;
+    color: white;
 }
