--- a/style.css
+++ b/style.css
@@ -30,5 +30,6 @@
 .hero .hero-body {
     background-color: rgba(137, 43, 226, 0.603);
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
