--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     padding: 100px;
 }
 .hero .hero-body .head {
-    font-size: 36px;
+    font-size: 34px;
     font-weight: bold;
+    color: white;
 }
