--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@
 }
 .h-txt {
     font-size: 23px;
-    font-weight: bold;
+    font-weight: bold;padding: 5px;
+    
 }
 img {
     height: 200px;
