--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ img {
     text-align: center;
     display: flex;
     flex-direction: column;
+    gap: 3rem;
 }
 .head {
     font-weight: bold;
