--- a/style.css
+++ b/style.css
@@ -72,6 +72,6 @@ img {
 }
 .txt a {
     text-decoration: none;
-    background-color: blue;
+    background-color: rgb(40, 68, 226);
     color: white;
 }
