--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ img {
     justify-content: center;
     margin: 70px 10px;
 }
+.form img {
+    border-radius: 7px;
+}
 .form form {
     background-color: white;
 }
