--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ img {
     background-color: white;
 }
 .form form p.head {
-    margin: 50px;
+    margin: 0 50px;
 }
 .form form label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
