--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ img {
     border-radius: 7px;
 }
 .form form {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.774);
 }
 .form form p.head {
     margin: 0 130px;
