--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@
 .hero .hero-body .sub {
     color: white;
 }
+.container2 {
+    background-color: grey;
+}
 .service {
     display: flex;
     flex-direction: column;
