--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ img {
 .form {
     display: flex;
     justify-content: center;
-    background-color: ;
+    background-color: rgba(128, 128, 128, 0.548);;
     gap: 1.5rem;
 }
 .form img {
