--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ img {
 }
 .form img {
     border-radius: 7px;
+    height: 150px;
 }
 .form form {
     background-color: rgba(255, 255, 255, 0.938);
