--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ img {
 }
 .form form {
     background-color: rgba(255, 255, 255, 0.938);
+    width: 600px;
 }
 .form form p.head {
     margin: 0 130px;
