--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ img {
 }
 .form form {
     background-color: rgba(255, 255, 255, 0.938);
-    width: 550px;
+    width: 600px;
+    border-radius: 7px;
 }
 .form form p.head {
     margin: 0 130px;
