--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ img {
     background-color: rgba(255, 255, 255, 0.938);
     width: 600px;
     border-radius: 7px;
+    padding: 10px;
 }
 .form form p.head {
     margin: 0 130px;
