--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ img {
 .form form p.head {
     margin: 0 130px;
 }
+.form form
 .form form label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
