--- a/style.css
+++ b/style.css
@@ -108,7 +108,9 @@ img {
 .form form p.head {
     margin: 0 130px;
 }
-.form form
+.form form .name {
+    padding: 5px;
+}
 .form form label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
