--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ img {
     margin: 0 130px;
     padding: 5px;
     display: flex;
+    justify-content: center;
 }
 .form form .name {
     padding: 5px;
