--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ img {
     background-color: rgba(255, 255, 255, 0.938);
     width: 600px;
     border-radius: 7px;
-    padding: 40px;
+    padding: 30px;
 }
 .form form p.head {
     margin: 0 130px;
@@ -113,6 +113,7 @@ img {
 }
 .form form .name {
     padding: 5px;
+    margin: 10px;
 }
 .form form label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
