--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ img {
 }
 .form form input {
     border-radius: 5px;
+    border: 2px solid gray;
     height: 40px;
     width: 500px;
     padding: 10px;
-    margin: 10px;
 }
