--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ img {
 }
 .form form .name {
     padding: 5px;
-    margin: 10px;
+    margin-top: 10px;
 }
 .form form label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
