--- a/style.css
+++ b/style.css
@@ -121,9 +121,9 @@ img {
 .form form input {
     border-radius: 10px;
     border: 1px solid gray;
-    height: 40px;
+    height: 50px;
     width: 520px;
-    padding: 10px;
+    padding-top: 10px;
     margin-top: 10px;
 }
 .form form .email {
