--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ img {
     border: 1px solid gray;
     height: 50px;
     width: 520px;
-    padding-top: 10px;
+    padding: 10px;
     margin-top: 10px;
 }
 .form form .email {
