--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ textarea {
     border: 1px solid grey;
     height: 100px;
 }
-button {
+.form form button {
     border-radius: 10px;
     background-color: rgb(40, 68, 226);
 }
