--- a/style.css
+++ b/style.css
@@ -145,5 +145,5 @@ textarea {
 .form form button {
     border-radius: 10px;
     background-color: rgb(40, 68, 226);
-    width: ;
+    width: 520px;
 }
