--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ img {
     padding: 5px;
     display: flex;
     justify-content: center;
+    font-weight: bolder;
 }
 .form form .name {
     padding: 5px;
@@ -149,4 +150,5 @@ textarea {
     height: 50px;
     color: white;
     border: 0px solid rgb(40, 68, 226);
+    margin-top: 20px;
 }
