--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ textarea {
 }
 footer {
     display: flex;
-    background-color: ;
+    background-color: rgba(0, 0, 0, 0.774);
 }
 .social a img {
     height: 40px;
