--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ footer {
     display: flex;
     background-color: rgba(0, 0, 0, 0.774);
     color: white;
+    gap: 5rem;
 }
 .social a img {
     height: 40px;
