--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ footer {
 .social ul {
     list-style-type: none;
     display: flex;
-    gap: .5rem;
+    gap: 1rem;
 } 
 .social a img {
     height: 40px;
