--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ footer {
     list-style-type: none;
     display: flex;
     gap: 1rem;
+    margin-top: 10px;
 } 
 .social a img {
     height: 40px;
