--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.774);
     color: white;
     gap: 7rem;
-    padding: 20px;
+    padding: 20px 30px;
 }
 .social ul {
     list-style-type: none;
