--- a/style.css
+++ b/style.css
@@ -168,9 +168,10 @@ footer p.head {
     list-style-type: none;
     display: flex;
     gap: 1rem;
+    margin-left: 70px;
 } 
 .social a img {
-    height: 40px;
+    height: 20px;
     color: white;
 }
 footer .about p.sub {
