--- a/style.css
+++ b/style.css
@@ -164,6 +164,9 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
+.social {
+    margin-left: 70px;
+}
 .social ul {
     list-style-type: none;
     display: flex;
