--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+body {
+    background-color: ;
+}
 .container nav {
     background-color: rgba(0, 0, 0, 0.774);
     display: flex;
