--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body {
-    background-color: ;
+    background-color: rgba(128, 128, 128, 0.548);
 }
 .container nav {
     background-color: rgba(0, 0, 0, 0.774);
