--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: rgba(128, 128, 128, 0.548);
 }
 .container nav {
-    background-color: rgba(0, 0, 0, 0.774);
+    background-color: #1f4a6844;
     display: flex;
     padding: 20px;
 }
