--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ footer p.head {
     gap: 1rem;
     margin-top: 15px;
 } 
-.social a img {
+.social ul a img {
     height: 20px;
     color: white;
     filter: grayscale(100%);
