--- a/style.css
+++ b/style.css
@@ -164,6 +164,9 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
+.sub ul {
+    list-style-type: none;
+}
 .social {
     margin-left: 100px;
 }
