--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
-.sub ul {
+.contact .sub ul {
     list-style-type: none;
 }
 .social {
