--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
-footer .contact p.sub ul li {
+footer .contact p.sub ul {
     list-style-type: none;
 }
 .social {
