--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
-footer .about .sub
+footer .about .sub {
+    
+}
 footer .sub ul {
     list-style-type: none;
     display: flex;
