--- a/style.css
+++ b/style.css
@@ -164,8 +164,8 @@ footer p.head {
     margin-bottom: 10px;
     font-size: 20px;
 }
-footer .about .sub {
-    
+footer .about .sub ul {
+
 }
 footer .sub ul {
     list-style-type: none;
