--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ footer p.head {
     font-size: 20px;
 }
 footer .about .sub ul {
-
+    font-size: 10px;
 }
 footer .sub ul {
     list-style-type: none;
